bynkc/tests/fixtures/negative/121_state_initialiser_type_mismatch/src/demo.bynk
context demo

type Light = enum { Red, Green }

agent Signal {
  key id: String

  state {
    count: Int = Red,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
